--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "commmute-art",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node app"
